- Edit playlist now works fine - Added endpoint to manage update of playlist - Fixed some minor bugs about DB queries - Added new modal generation function in scripts.js that allow to show a confirmation modal for all purposes - Added swagger elements
